<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <DUT Name="ST_TsConnectionInfoEL1904" Id="{67899744-a091-40bb-b667-e1e93334dabb}">
    <Declaration><![CDATA[TYPE ST_TsConnectionInfoEL1904 :
(*******************************************************************************************************
Description			:	Connection information data of EtherCAT Slaves with 1 byte safe data 
Supported terminals : 	EL1904, EL2904...
Date 				:	04.04.2016
********************************************************************************************************)
STRUCT

	nState 	 								:USINT;
	nDiag 		 							:USINT;
	nInOutSafeDataByte1						:BYTE;
	
END_STRUCT
END_TYPE
(* End *)]]></Declaration>
  </DUT>
</TcPlcObject>